--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.22.0",
     "git-commit-msg-linter": "^3.0.0",
-    "husky": "^4.3.8"
+    "husky": "^4.3.8",
+    "lint-staged": "^10.5.3"
   }
 }
